...
            IconButton(
                onClick = { onBackClick() }
            ) {
                Icon(
                    modifier = Modifier
                        .size(26.dp)
                        .testTag("back_button"),
                    painter = painterResource(id = TangaIcons.LeftArrow),
                    tint = MaterialTheme.colorScheme.onTertiaryContainer,
                    contentDescription = "back navigation"
                )
            }
        },
...
            IconButton(onClick = {
                summary?.let(onShare)
            }) {
                Icon(
                    modifier = Modifier
                        .size(24.dp)
                        .testTag("share"),
                    painter = painterResource(id = R.drawable.ic_share_2),
                    tint = MaterialTheme.colorScheme.onTertiaryContainer,
                    contentDescription = "share summary"
                )
            }
        }
...
