...
        maxLines = maxLines,
        textAlign = textAlign
    )
}

/**
 * Text that expends when clicked on "Show more" and collapses when clicked on "Show less"
 * Show the "Show more" button only if the text is more than 3 lines
 */
@Composable
fun ExpendableText(
    text: String,
    modifier: Modifier = Modifier
...
