...
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_logout_title">Log out from Tanga?</string>
    <string name="confirm_logout_message">Are you sure you want to log out? If yes that\'s fine, you can log back in later</string>
    <string name="freemium">Freemium</string>
    <string name="anonymous">Anonymous</string>
    <string name="summary_duration">%1$s min</string>
    <string name="home_welcome_message">Hey, %1$s</string>
    <string name="profile_upgrade_to_pro">Get Tanga Premium</string>
    <string name="auth_welcome_to_tanga">Welcome to Tanga</string>
    <string name="auth_sign_up_with_google_message">Sign in or Sign up with Google to start enjoying Tanga Now</string>
    <string name="auth_terms_and_privacy_prefix_text">By using the app, you agree to our </string>
    <string name="auth_terms_and_conditions">Terms and Conditions</string>
...
    <string name="explore_search">Book title, author name</string>
    <string name="explore_categories">Categories</string>
    <string name="business_career">Business &amp; Career</string>
    <string name="productivity_self_growth">Productivity &amp; Self-Growth</string>
    <string name="self_help">Self-Help</string>
    <string name="financial_education">Financial Education</string>
    <string name="summary_details_introduction">Introduction</string>
    <string name="summary_details_key_learnings_title">Key Ideas</string>
    <string name="summary_details_recommendations">Recommended summaries</string>
    <string name="pricing_plan_message">Upgrade to Premium and get the best of Tanga</string>
    <string name="pricing_plan_offer_no_ads">No Ads</string>
    <string name="pricing_plan_offer_unlimited_access">Unlimited Access to Summaries</string>
    <string name="pricing_plan_offer_unlimited_audios">Unlimited Access to Audios</string>
...
